--- a/views/LookPropertyDetails.ejs
+++ b/views/LookPropertyDetails.ejs
@@ -57,18 +57,7 @@
         <!-- ========== MAIN CONTENT ========== -->
         <main id="content">
             <!-- Breadcrumb -->
-            <div class="border-bottom mb-7">
-                <div class="container">
-                    <nav class="py-3" aria-label="breadcrumb">
-                        <ol class="breadcrumb breadcrumb-no-gutter mb-0 flex-nowrap flex-xl-wrap overflow-auto overflow-xl-visble">
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a href="#">Hotels</a></li>
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1"><a href="#">London Hotels</a></li>
-                            <li class="breadcrumb-item flex-shrink-0 flex-xl-shrink-1 active" aria-current="page">Park Avenue Baker Street London</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
+            
             <!-- End Breadcrumb -->
 
             <div class="container">
@@ -82,16 +71,10 @@
                                 <div class="d-block d-md-flex flex-horizontal-center font-size-14 text-gray-1">
                                     <i class="icon flaticon-placeholder mr-2 font-size-20"></i> <%= PropertyDetails.city%>,
                                     <%= PropertyDetails.state%>,<%= PropertyDetails.country%>
-                                    <a href="#" class="ml-1 d-block d-md-inline"> - View on map</a>
+                                    <a href="#" class="ml-1 d-block d-md-inline"></a>
                                 </div>
                             </div>
-                            <ul class="list-group list-group-borderless list-group-horizontal custom-social-share">
-                                <li class="list-group-item px-1">
-                                    <a href="#" class="height-45 width-45 border rounded border-width-2 flex-content-center">
-                                        <i class="flaticon-share font-size-18 text-dark"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                            
                         </div>
                         <div class="py-4 border-top mb-4">
                             <ul class="mb-4 list-group list-group-borderless list-group-horizontal flex-center-between text-center flex-wrap">
@@ -203,20 +186,6 @@
                                         <a class="nav-link font-weight-medium" href="#scroll-location">
                                             <div class="d-flex flex-column flex-md-row  position-relative text-dark align-items-center">
                                                 <span class="tabtext font-weight-semi-bold">Map</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link font-weight-medium" href="#scroll-video">
-                                            <div class="d-flex flex-column flex-md-row  position-relative text-dark align-items-center">
-                                                <span class="tabtext font-weight-semi-bold">Video</span>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link font-weight-medium" href="#scroll-reviews">
-                                            <div class="d-flex flex-column flex-md-row  position-relative text-dark align-items-center">
-                                                <span class="tabtext font-weight-semi-bold">Reviews</span>
                                             </div>
                                         </a>
                                     </li>
