--- a/views/edit-user.ejs
+++ b/views/edit-user.ejs
@@ -70,7 +70,7 @@
                                     Phone
                                 </label>
 
-                                <input type="number" class="form-control" name="phone" placeholder="+1-111-111-1111" aria-label="+1-111-111-1111" required
+                                <input type="number" class="form-control" name="phone" placeholder="+1-111-111-1111" aria-label="111-111-1111" required
                                        data-msg="Please enter a valid phone number."
                                        data-error-class="u-has-error"
                                        data-success-class="u-has-success" value="<%= user.phone %>">
@@ -85,7 +85,7 @@
                                     Password
                                 </label>
 
-                                <input type="password" class="form-control" name="password" placeholder="" aria-label="+1-111-111-1111" required
+                                <input type="password" class="form-control" name="password" placeholder="" aria-label="111-111-1111" required
                                        data-msg="Please enter a valid password."
                                        data-error-class="u-has-error"
                                        data-success-class="u-has-success" value="<%= user.phone %>">
