--- a/views/property-list.ejs
+++ b/views/property-list.ejs
@@ -307,21 +307,11 @@
                                 </div>
                             </aside>
                             <!-- End Sidebar Navigation -->
-                        </div>
-                        <h3 class="font-size-21 font-weight-bold mb-0 text-lh-1 mr-2 mb-3 mb-md-0 flex-shrink-0">300+ places to stay</h3>
-                        <!-- Nav Links -->
+                        </div><!-- Nav Links -->
                         <ul class="nav flex-nowrap tab-nav align-items-center py-2 px-0 mb-3 mb-md-0" role="tablist">
                             <li class="nav-item d-flex align-items-center flex-shrink-0 flex-xl-shrink-1">
                                 <a href="#" class="nav-link font-weight-normal text-gray-1 text-lh-1dot6 py-1 px-4 px-xl-3 px-wd-5">Recommended
                                 </a>
-                            </li>
-                            <li class="nav-item d-flex align-items-center flex-shrink-0 flex-xl-shrink-1 border-left">
-                                <select class="js-select selectpicker dropdown-select bootstrap-select__custom-nav w-auto" data-style="btn-sm py-1 px-4 px-xl-3 px-wd-5 font-size-16 text-gray-1 d-flex align-items-center">
-                                    <option value="one" selected>Price</option>
-                                    <option value="two">Two</option>
-                                    <option value="three">Three</option>
-                                    <option value="four">Four</option>
-                                </select>
                             </li>
                             <li class="nav-item d-flex align-items-center flex-shrink-0 flex-xl-shrink-1 border-left">
                                 <select class="js-select selectpicker dropdown-select bootstrap-select__custom-nav w-auto" data-style="btn-sm py-1 px-4 px-xl-3 px-wd-5 font-size-16 text-gray-1 d-flex align-items-center">
@@ -377,7 +367,7 @@
                                         <%= PropertyList[i].rentalname%>  </a>
                                     <div class="mb-0">
                                         <span class="mr-1 font-size-14 text-gray-1">From</span>
-                                        <span class="font-weight-bold">£<%= PropertyList[i].price%></span>
+                                        <span class="font-weight-bold">CAD <%= PropertyList[i].price%></span>
                                         <span class="font-size-14 text-gray-1"> / night</span>
                                     </div>
                                
