--- a/views/_layouts/head.ejs
+++ b/views/_layouts/head.ejs
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="../../favicon.png">
+<link rel="shortcut icon" href="/logo/favicon.png">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
