--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
         <!-- ========== MAIN CONTENT ========== -->
         <main id="content">
             <!-- Hero Section -->
-            <div class="bg-img-hero text-center mb-1" style="background-image: url(assets/img/1920x400/img3.jpg);">
+            <div class="bg-img-hero text-center mb-1" style="background-image: url(images/2.jpg);">
                 <div class="container space-top-xl-3 py-6 py-xl-0">
                     <div class="row justify-content-center py-xl-4">
                         <!-- Info -->
@@ -17,7 +17,7 @@
                             <h1 class="font-size-40 font-size-xs-30 text-white font-weight-bold mb-0">About Us</h1>
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb breadcrumb-no-gutter justify-content-center mb-0">
-                                <li class="breadcrumb-item font-size-14"> <a class="text-white" href="index.html">Home</a> </li>
+                                <li class="breadcrumb-item font-size-14"> <a class="text-white" href="/">Home</a> </li>
                                 <li class="breadcrumb-item custom-breadcrumb-item font-size-14 text-white active" aria-current="page">About</li>
                               </ol>
                             </nav>
@@ -31,18 +31,18 @@
             <div class="slider border-bottom border-color-3">
                 <div class="container space-1">
                     <div class="w-md-80 w-lg-70 text-center mx-md-auto mb-5 mt-3">
-                        <h2 class="section-title text-black font-size-xs-28 font-weight-bold mb-0">We’re truely dedicated to make your travel experience as much simple and fun as possible!</h2>
+                        <h2 class="section-title text-black font-size-xs-28 font-weight-bold mb-0">We’re truely dedicated to make your stay experience as much simple and fun as possible!</h2>
                      </div>
                      <section class="w-lg-80 mx-auto mb-4">
                         <div class="row">
                             <div class="col-md-6">
                                 <h2 class="font-size-21 font-weight-bold text-center text-md-left ">Our Story</h2>
-                                <p class="text-gray-1">Bringing you a modern, comfortable, and connected travel experience is one of our highest priorities and that’s why we continuously try to improve your experience when you book anything with us.</p>
+                                <p class="text-gray-1">Bringing you a modern, comfortable, and connected stay experience is one of our highest priorities and that’s why we continuously try to improve your experience when you book anything with us.</p>
                             </div><!-- /.col -->
 
                             <div class="col-md-6">
                                 <h2 class="font-size-21 font-weight-bold text-center text-md-left ">Our mission</h2>
-                                <p class="text-gray-1">We really appreciate and welcome any of suggstions you might have for us, so feel free drop us line anytime.Air conditioning, heating, desk, alarm clock, iPod docking station can be found in selected guestrooms.</p>
+                                <p class="text-gray-1">We really appreciate and welcome any of suggestions you might have for us, so feel free drop us line anytime. Air conditioning, heating, desk, alarm clock, iPod docking station can be found in selected guestrooms.</p>
                             </div><!-- /.col -->
 
                         </div><!-- ./row -->
@@ -90,7 +90,7 @@
                         <div class="col-md-4">
                             <i class="flaticon-price text-primary font-size-80 mb-3"></i>
                             <h5 class="font-size-17 text-dark font-weight-bold mb-2"><a href="#">Competitive Pricing</a></h5>
-                            <p class="text-gray-1 px-xl-2 px-uw-7">With 500+ suppliers and the purchasing power of 300 million members, mytravel.com can save you more!</p>
+                            <p class="text-gray-1 px-xl-2 px-uw-7">With 500+ suppliers and the purchasing power of 300 million members</p>
                         </div>
                         <!-- End Icon Block -->
 
@@ -98,7 +98,7 @@
                         <div class="col-md-4">
                             <i class="flaticon-medal text-primary font-size-80 mb-3"></i>
                             <h5 class="font-size-17 text-dark font-weight-bold mb-2"><a href="#">Award-Winning Service</a></h5>
-                            <p class="text-gray-1 px-xl-2 px-uw-7">Travel worry-free knowing that we're here if you needus, 24 hours a day</p>
+                            <p class="text-gray-1 px-xl-2 px-uw-7">Stay worry-free knowing that we're here if you needus, 24 hours a day</p>
                         </div>
                         <!-- End Icon Block -->
 
@@ -106,7 +106,7 @@
                         <div class="col-md-4">
                             <i class="flaticon-global-1 text-primary font-size-80 mb-3"></i>
                             <h5 class="font-size-17 text-dark font-weight-bold mb-2"><a href="#">Worldwide Coverage</a></h5>
-                            <p class="text-gray-1 px-xl-2 px-uw-7">Over 1,200,000 hotels in more than 200 countries and regions & flights to over 5,000 cities</p>
+                            <p class="text-gray-1 px-xl-2 px-uw-7">Over 1,200,000 places to stay in more than 200 countries and regions</p>
                         </div>
                         <!-- End Icon Block -->
                     </div>
