--- a/views/index.ejs
+++ b/views/index.ejs
@@ -171,7 +171,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center">
-                                    <p class="text-gray-1 font-italic text-lh-inherit px-xl-20 mx-xl-15 px-xl-20 mx-xl-18">This is the 3rd time I’ve used Travelo website and telling you the truth their services are always realiable and it only takes few minutes to plan and finalize</p>
+                                    <p class="text-gray-1 font-italic text-lh-inherit px-xl-20 mx-xl-15 px-xl-20 mx-xl-18">This is the 3rd time I’ve used SPM website and telling you the truth their services are always reliable and it only takes few minutes to plan and finalize</p>
                                     <h6 class="font-size-17 font-weight-bold text-gray-6 mb-0">Jessica Brown</h6>
                                     <span class="text-blue-lighter-1 font-size-normal">client</span>
                                 </div>
