bug fixes and addressed other issues

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -64,6 +64,11 @@
                                         <span class="font-weight-medium">Country</span>
                                         <span class="text-secondary text-right"><%=UserInfo.Country%></span>
                                     </li>
+
+                                    <li class="d-flex justify-content-between py-2">
+                                        <span class="font-weight-medium">Booking Notification EMail-ID</span>
+                                        <span class="text-secondary text-right"><%=BookingInfo.ReservationEmailID%></span>
+                                    </li>
                                 </ul>
                                 <!-- End Fact List -->
                             </div>
@@ -108,7 +113,7 @@
                                             <ul class="list-unstyled font-size-1 mb-0 font-size-16">
                                                 <li class="d-flex justify-content-between py-2">
                                                     <span class="font-weight-medium"><%=BookingInfo.DisplayCheckInDate%> - <%=BookingInfo.DisplayCheckOutDate%><br>
-                                                        <span class="text-gray-1 font-weight-normal">1 x Comfort Room</span>
+                                                        
                                                     </span>
                                                    
                                                 </li>
