--- a/views/property-details.ejs
+++ b/views/property-details.ejs
@@ -4,7 +4,33 @@
     <%- include('_layouts/head') -%>
     <%- include('_layouts/scripts') -%>
     <script language="javascript" type="text/javascript">
-         
+    function getMaxDate()
+        {
+            var dtToday = new Date();
+                
+                var month = dtToday.getMonth() + 3;
+                var day = dtToday.getDate();
+                var year = dtToday.getFullYear();
+                if(month < 10)
+                    month = '0' + month.toString();
+                if(day < 10)
+                    day = '0' + day.toString();
+                
+                var maxDate = year + '-' + month + '-' + day;
+                console.log('max date :'+maxDate);
+                return new Date(year,month,day);
+        }
+        function display()
+         {
+           //  alert('calendar closed!!!');
+    //          console.log('picketr closed!');
+    //          const myInput = document.getElementById("checkin_checkout_dates");
+    //     //myInput.className = 'active';
+    //   //  myInput._flatpickr.config.minDate='today';
+    //     myInput._flatpickr.config._disable = ["14 Apr 2020"];
+    //     $("#checkin_checkout_dates").datepicker("refresh");
+         }
+        
          function updateBookingInfo()
         {
             var element = document.getElementById("spanGuestsAndRooms");
@@ -18,7 +44,91 @@
             //$('#basicDropdownClick').hide();
             //$('#basicDropdownClick').show();
         }
-	//	$(document).ready(function () {
+        function dispData(){
+       alert('picker!');
+            }
+		$(document).ready(function () {
+            console.log('dispdate : <%=UserPreference.DisplayDate%>');
+            console.log('CheckInDate : <%=UserPreference.CheckInDate%>');
+            console.log('CheckOutDate : <%=UserPreference.CheckOutDate%>');
+            var btnbooknow = document.getElementById("btnBookNow");
+            var btnsoldout = document.getElementById("btnSoldOut");
+            var msg = document.getElementById("txtMessage");
+            <%if(!IsPropertyAvailable)
+            {%>
+               
+            btnbooknow.style.display = "none";
+            btnsoldout.style.display = "block";
+            msg.style.display = "block";
+                <%}
+                else{
+                    %>
+                    btnbooknow.style.display = "block";
+            btnsoldout.style.display = "none";
+            msg.style.display = "none";
+                    <%}%>
+            //const myInput1 = document.getElementById("checkin_checkout_dates");
+           // myInput1._flatpickr.config.onClose=display;
+            window.setTimeout(function () {
+        // your stuff here
+        //var picker = flatpickr('#checkin_checkout_dates');
+
+        const myInput = document.getElementById("checkin_checkout_dates");
+        //myInput.className = 'active';
+        myInput._flatpickr.config.minDate='today';
+        //myInput._flatpickr.config.disable = ["27 Apr 2020"];
+        //console.log('<%=DisabledDates[0].from%>');
+        var items = [];
+        <%
+        for(let daterange of DisabledDates)
+        {%>
+            items.push(
+                {
+                    from : '<%=daterange.from%>',
+                    to :  '<%=daterange.to%>'
+                });
+        <%}
+        %>
+        //myInput._flatpickr.set('defaultDate','<%=UserPreference.CheckInDate%>,<%=UserPreference.CheckInDate%>');
+        myInput._flatpickr.set('disable', items); 
+        
+        //myInput._flatpickr.config.set('onClose', dispData()); 
+        //console.log('len : '+myInput._flatpickr.config.onClose.length);
+        myInput._flatpickr.config.onClose.push(function(selectedDates, dateStr, instance){
+            
+            btnbooknow.style.display = "block";
+            btnsoldout.style.display = "none";
+            msg.style.display = "none";
+            //btnsoldout.style.display = "none";
+        }); 
+        myInput._flatpickr.set('maxDate',getMaxDate());
+        console.log('[\"<%=UserPreference.CheckInDate%>\" , \"<%=UserPreference.CheckOutDate%>\"]');
+        
+        //myInput._flatpickr("refresh");
+        //
+//         myInput._flatpickr = {
+//  minDate:'today'
+//         onClose:function(selectedDates, dateStr, instance)
+//           {
+//             console.log(selectedDates+'\n'+ dateStr+'\n'+ instance);
+//           }
+//        }
+        myInput._flatpickr.config.dateFormat = 'd M yy';
+     //   myInput._flatpickr.set("onValueUpdate",dispData); 
+        //var mxdate = getMaxDate();
+        //var mydate = mxdate.getDate()+'-May-'+mxdate.getFullYear();
+       // myInput._flatpickr.config.maxDate= mydate ;
+//console.log('input :'+myInput._flatpickr.config);
+       // myInput.config['minDate']='today';
+      // $("#checkin_checkout_dates").load(location.href + " #checkin_checkout_dates");
+    }, 0);
+            //if (window.performance && window.performance.navigation.type === window.performance.navigation.TYPE_BACK_FORWARD) {
+    $('#txtGuestsCount').val('<%= UserPreference.Guests%>');      
+
+        //      const myInput = document.getElementById("checkin_checkout_dates");
+        // myInput._flatpickr.config.minDate='today';
+        // myInput._flatpickr.config._disable = ["27 Apr 2020"];     
+        });
 
 	// 		$('#btnBookNow').click(function () {
     //             var dates= $('#checkin_checkout_dates').val().split(" - ");
@@ -389,7 +499,7 @@
 
                                     <!-- Input -->
                                     <span class="d-block text-gray-1 font-weight-normal mb-0 text-left">First Available Dates</span>
-                                    <div class="mb-4">
+                                    <div class="mb-4" id="datepickrControl">
                                         <div class="border-bottom border-width-2 border-color-1">
                                             <div id="datepickerWrapperPick" class="u-datepicker input-group">
                                                 <div class="input-group-prepend">
@@ -397,13 +507,15 @@
                                                       <i class="flaticon-calendar text-primary font-weight-semi-bold"></i>
                                                     </span>
                                                 </div>
-                                                <input class="js-range-datepicker w-auto font-size-16 ml-1 shadow-none font-weight-bold form-control hero-form bg-transparent border-0 flatpickr-input p-0" type="text" placeholder="July 7/2019" aria-label="July 7/2019"
+                                                <input class="js-range-datepicker w-auto font-size-16 ml-1 shadow-none font-weight-bold form-control hero-form bg-transparent border-0 flatpickr-input p-0"  type="text"  aria-label="July 7/2019"
                                                 data-rp-wrapper="#datepickerWrapperPick"
                                                 data-rp-type="range"
-                                                data-rp-date-format="M d / y"
+                                                placeholder="<%=UserPreference.CheckInDate%> - <%=UserPreference.CheckOutDate%>"
+                                                data-rp-default-date="[<%= UserPreference.DisplayDate%>]"
                                                 name = "checkin_checkout_dates"
-                                                id="checkin_checkout_dates"
-                                                data-rp-default-date="[<%= UserPreference.DisplayDate%>]">
+                                                id="checkin_checkout_dates"                                                
+                                               
+                                                >
                                                
                                             </div>
                                             <!-- End Datepicker '["Jul 7 / 2020", "Aug 25 / 2020"]'-->
@@ -471,14 +583,31 @@
                                     <!-- End Input -->
 
                                  <!-- <div class="text-center"> -->
-                                        <a href="javascript:;" 
+                                     <div id="btnBookNow">
+                                  
+                                        <a id="propertyBookingControl" href="javascript:;" 
                                         onclick="document.getElementById('frmBookingConfirmation').submit(); return false;"
-                                        class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1 transition-3d-hover font-weight-bold">Book Now</a>
+                                        class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1 transition-3d-hover font-weight-bold"
+                                        >
+                                        Book Now
+                                    </a>
+                                </div>
+                                <div id="btnSoldOut">
+                                        <a id="propertyBookingControl1"
+                                        style="background-color: gray;color: whitesmoke;border-color: gray;"
+                                        class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1  font-weight-bold"
+                                        >
+                                        Sold Out!
+                                    </a>
+                                </div>
                                     <!-- </div>  -->
                                     <!-- <div class="col-sm-12 col-lg-1dot8 align-self-lg-end text-md-right" style="margin: 0 auto;">
                                         <input  type="submit" value="Book Now" id= "btnBookNow"  class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1 transition-3d-hover font-weight-bold"/>
                                     </div> -->
-                                    <div align="center"><label id="txtMessage"></label></div>
+                                 
+                                        <br/>
+                                    <span id="txtMessage" style="font-size: 15px; color: red;font-family: 'Rubik', Helvetica, Arial, sans-serif;">Select other available dates from the calendar</span>
+                                   
                                 </div>
                             </div>
                         </div>
